# spellchecker

./: .gitignore  .testr.conf  .travis.yml  MANIFEST.in  Makefile  README.md  circle.yml  requirements.txt  setup.cfg  setup.py  spellcheckertest.py  test-requirements.txt  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
libindic/inflector/: __init__.py
libindic/inflector/data/: ml_inflection.json
libindic/spellchecker/: Malayalam.py  __init__.py
libindic/spellchecker/data/: ml_rootwords.txt
libindic/spellchecker/templates/: libindic.spellchecker.html
libindic/spellchecker/tests/: test_enhanced.py  tests_spellchecker.py
libindic/spellchecker/tests/resources/: false.txt  true.txt
libindic/stemmer/: __init__.py
libindic/stemmer/data/: ml_rules.txt
libindic/stemmer/templates/: indicstemmer.html
libindic/stemmer/tests/: tests_stemmer.py
spellchecker/: __init__.py  core.py  indexer.py  spellchecker.py
spellchecker/dicts/: mr_IN.index
spellchecker/templates/: spellchecker.html
tests/: spellchecker_tests.py
